--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,12 @@
+[server]
+headless = true
+
+[theme]
+base = "light"
+
+[browser]
+gatherUsageStats = false
+
+[runner]
+script = "nextskill_full_with_export.py"
 
