--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,11 +2,10 @@
 headless = true
 
 [theme]
-base = "light"
+primaryColor = "#4CAF50"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
 
-[browser]
-gatherUsageStats = false
-
-[runner]
-script = "nextskill_full_with_export.py"
-
+[app]
+page = "nextskill_full_with_export.py"
